<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="dam.isi.frsf.utn.edu.ar.lab03.CrearOfertaActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/ingrese_oferta"
        android:id="@+id/tvOferta"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etOferta"/>

    <GridLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/moneda_de_pago"
            android:id="@+id/tvMonedaPago"
            android:layout_margin="5dp"
            android:layout_row="0"
            android:layout_column="0" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioGroup"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_rowSpan="5">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dolar"
                android:id="@+id/rbDolar"
                android:layout_margin="5dp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/euro"
                android:id="@+id/rbEuro"
                android:layout_margin="5dp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/peso_argentino"
                android:id="@+id/rbPesoArg"
                android:layout_margin="5dp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/libra_esterlina"
                android:id="@+id/rbLibra"
                android:layout_margin="5dp" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/real"
                android:id="@+id/rbReal"
                android:layout_margin="5dp" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/trabajo"
            android:id="@+id/tvTrabajo"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_margin="5dp" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sTrabajo"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_margin="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/categoria"
            android:id="@+id/tvCategoria"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_margin="5dp" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sCategoria"
            android:layout_row="3"
            android:layout_column="1"
            android:layout_margin="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/fecha_fin"
            android:id="@+id/tvFechaFin"
            android:layout_row="4"
            android:layout_column="1"
            android:layout_margin="5dp" />

        <DatePicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dpFechaFin"
            android:layout_row="5"
            android:layout_column="1"
            android:layout_margin="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/horas"
            android:id="@+id/tvHoras"
            android:layout_row="6"
            android:layout_column="0"
            android:layout_margin="5dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/etHoras"
            android:layout_row="7"
            android:layout_column="0"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/max_pesos_hora"
            android:id="@+id/tvMaxPorHora"
            android:layout_row="8"
            android:layout_column="0"
            android:layout_margin="5dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/etMaxPorHora"
            android:layout_row="9"
            android:layout_column="0"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/en_ingles"
            android:id="@+id/chkEnIngles"
            android:layout_row="10"
            android:layout_column="0" />
    </GridLayout>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/guardar"
        android:id="@+id/bGuardar"
        android:layout_marginTop="20dp" />
</LinearLayout>
